refactor: implement 3-layer architecture for category, brand, version and color